--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "solidjs",
     "reactivity"
   ],
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/index.mjs",
   "repository": "https://github.com/solidjs-community/eslint-plugin-solid",
   "author": "Josh Wilson <joshwilsonvu@gmail.com>",
   "license": "MIT",
@@ -20,7 +19,7 @@
   "scripts": {
     "prepare": "husky install",
     "prepublishOnly": "pnpm build && pnpm lint && prettier --check src && pnpm test:all",
-    "build": "tsc -p tsconfig.build.json && pnpm run docs",
+    "build": "unbuild",
     "lint": "eslint --ignore-pattern test/fixture/invalid .",
     "docs": "PARSER=none ts-node --transpile-only scripts/docs.ts",
     "test": "jest",
@@ -80,16 +79,11 @@
     "rollup": "^2.79.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "unbuild": "^2.0.0"
   },
   "peerDependencies": {
     "eslint": "^6.0.0 || ^7.0.0 || ^8.0.0"
-  },
-  "lint-staged": {
-    "*!(test).{js,jsx,ts,tsx}": [
-      "eslint --ignore-pattern test/fixture/invalid --fix",
-      "prettier --write"
-    ]
   },
   "prettier": {
     "printWidth": 100
